[package]
name = "final-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "^0.19"
wasm-bindgen-futures = "0.4.30"
reqwasm = "0.5.0"
serde_json = "1.0.81"
serde = { version = "1.0.37", features = ["derive"]}
js-sys = "0.3.56"
getrandom = { version = "0.2", features = ["js"] }


[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
]